integrando com a cal-lib #2

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -7,12 +7,12 @@
     <input type="submit" value="Operation!" />
     <p>
     <img alt="addiction" src="http://upload.wikimedia.org/wikipedia/en/thumb/9/94/Symbol_support_vote.svg/50px-Symbol_support_vote.svg.png">
-    <input type="radio" name="selection" value="addiction" />
+    <input type="radio" name="selection" value="sum" />
     <img alt="subtraction" src="http://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Symbol_oppose_vote.svg/50px-Symbol_oppose_vote.svg.png">
-    <input type="radio" name="selection" value="subtraction" />
+    <input type="radio" name="selection" value="minus" />
     <img alt="multiplication" src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Symbol_multiplication_vote.svg/50px-Symbol_multiplication_vote.svg.png">
-    <input type="radio" name="selection" value="multiplication" />
+    <input type="radio" name="selection" value="mult" />
     <img alt="division" src="http://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Symbol_divide_vote.svg/50px-Symbol_divide_vote.svg.png">
-    <input type="radio" name="selection" value="division" />
+    <input type="radio" name="selection" value="div" />
     </p>
 </form>
